--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -17,7 +17,7 @@
         <tr class="no-border-top">
           <td>
             <span class="font-large">Teacher:</span>
-            <h4 class="text-main"><%= @classroom.teachers.first.full_name if @classroom.teachers.any? %></h4>
+            <h4 class="text-main"><%= current_user.teacher? && current_user.full_name || @classroom.teachers.map(&:full_name).join(', ') %></h4>
           </td>
           <td>
             <span class="font-large">Type:</span>
