--- a/app/views/users/_form_object_dropdown.html.erb
+++ b/app/views/users/_form_object_dropdown.html.erb
@@ -1,7 +1,6 @@
 <% object = @user.send(type) %>
-<div class="form-group <%= type.to_s %> <%= @user.new_record? && !object && type != :role ? 'hidden' : '' %>">
+<div class="form-group <%= type.to_s %> <%= !@user.can_have?(type) || @user.new_record? && !object ? 'hidden' : '' unless type == :role %>">
   <%= f.label "#{type}_id", type.to_s.capitalize,class: "col-sm-4 control-label text-main" %>
-  <%= f.hidden_field "#{type}_id", value: object.try(:id) %>
   <% if @user.new_record? && object || (object && object.is_a?(Role) && params[:edit_role] == 'false') %>
     <div class="col-sm-8">
       <label class="col-sm-4 control-label text-main accessToken"><%= object.name %></label>
@@ -9,6 +8,7 @@
   <% else %>
     <div class="col-sm-8">
       <div class="dropdown select <%= type.to_s %>">
+        <%= f.hidden_field "#{type}_id", value: object.try(:id) %>
         <%= render 'dropdown', object: object, options:options %>
       </div>
     </div>
