#142 - change styles for alert notifications.

--- a/app/assets/stylesheets/bootstrap_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.scss
@@ -46,3 +46,5 @@
 .dropdown-menu {max-height:160px; overflow:auto;}
 
 .nav-pills.simple.bordered > li:only-child > a{border-radius: 26px;}
+
+.alert {padding-top: 5px; padding-bottom: 5px;}
