#144 - handle dashboard for teacher without classroom

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -159,3 +159,5 @@ label.accessToken{margin-left: -12px}
 .resetForm .control-label{text-align:right !important;}
 
 .dropdown.simple.bulkTime a{ border-radius: 100px; height: 30px;}
+
+.padding-wall{ padding: 200px 0; }
