--- a/app/views/users/activities.html.erb
+++ b/app/views/users/activities.html.erb
@@ -8,6 +8,16 @@
   </div>
 </div>
 
+<% if not @current_classroom %>
+
+<div class="container kmSection">
+  <div class="row text-center">
+    <h3 class="padding-wall">You don't have a classroom assigned to you.</h3>
+  </div>
+</div>
+
+<% else %>
+
 <div class="container kmSection">
   <div class="row">
     <%= form_tag activities_path, method: :get do %>
@@ -165,3 +175,5 @@
     });
   });
 </script>
+
+<% end %>
