#144 - replaced "if not" with "unless"

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,4 +1,4 @@
-<% if not @current_classroom %>
+<% unless @current_classroom %>
 
 <div class="container-fluid kmSection">
   <div class="row kmSectionTitle">
