--- a/app/views/users/activities.html.erb
+++ b/app/views/users/activities.html.erb
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<% if not @current_classroom %>
+<% unless @current_classroom %>
 
 <div class="container kmSection">
   <div class="row text-center">
