--- a/app/assets/stylesheets/style-classic.scss
+++ b/app/assets/stylesheets/style-classic.scss
@@ -7,7 +7,7 @@
     > .dropdown-toggle {color:$color-main;}
   }
   .dropdown-toggle.full-width {
-    > span.value {width:100%;}
+    > span.value {width:100%; text-overflow: ellipsis; overflow: hidden;}
     > span.caret {margin-left:-7px;}
     + .dropdown-menu {width:100%;}
   }
