--- a/app/views/users/dashboard_classroom.html.erb
+++ b/app/views/users/dashboard_classroom.html.erb
@@ -62,8 +62,7 @@
           <% unless current_user.teacher? %>
             <th class="text-center">Teachers</th>
             <th></th>
-            <th class="text-center">Choose Teacher</th>
-            <th class="fit-left"></th>
+            <th></th>
           <% end %>
           <th class="text-center nowrap">Total Students</th>
           <th></th>
@@ -86,7 +85,6 @@
               <% @current_classroom.teachers.each do |teacher| %>
                 <p>
                   <% if current_user && (can? :edit, teacher) %>
-                    <%= link_to 'Unassign', users_admin_path(teacher, user: { classroom_id: nil }, url: dashboard_classroom_path(classroom: @current_classroom)), method: :patch, class: 'btn btn-warning btn-simple btn-sm' %>
                     <%= link_to 'Edit', edit_users_admin_path(@current_classroom.teachers.first, edit_role: false), class: 'btn btn-warning btn-simple btn-sm' %>
                     <%= link_to 'Delete', users_admin_path(teacher, url: dashboard_classroom_path(classroom: @current_classroom)), method: :delete, class: 'btn btn-danger btn-simple btn-sm', id: 'btn_delete_teacher', data: { confirm: "Are you sure to remove this person from the system? This cannot be undone." } %>
                   <% end %>
@@ -94,33 +92,8 @@
                 </p>
               <% end %>
             </td>
-            <td class="text-left minimal" style="padding-top:18px;">
-              <div class="dropdown simple medium select" data-target="add_teacher_id">
-                <a href="javascript:" class="dropdown-toggle nowrap" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  <span class="value"><%= @teachers.first.full_name %></span>
-                  <span class="caret"></span>
-                </a>
-                <div class="dropdown-wrap dropdown-menu-right">
-                  <ul class="dropdown-menu">
-                    <% @teachers.each do |teacher| %>
-                      <li><%= link_to teacher.full_name, 'javascript:', data: { id: teacher.id } %></li>
-                    <% end %>
-                  </ul>
-                  <div class="dropdown-action">
-                    <%= link_to new_users_admin_path(classroom:@current_classroom, role: 'Teacher'), class:'btn' do %>
-                      <i class="fa fa-plus"></i>
-                      <span>Add Teacher</span>
-                    <% end %>
-                  </div>
-                </div>
-              </div>
-            </td>
-            <td class="minimal fit-left" style="padding-top:18px;">
-              <%= form_for @current_classroom do |f| %>
-                <%= f.hidden_field :user_id, value: nil, id: 'add_teacher_id' %>
-                <%= hidden_field_tag :url, dashboard_classroom_path(classroom: @current_classroom) %>
-                <%= f.submit 'Assign', class: 'btn btn-warning btn-simple' %>
-              <% end %>
+            <td class="minimal" style="padding-top:18px;">
+              <%= link_to 'Add Teacher', new_users_admin_path(classroom: @current_classroom, role: 'Teacher'), class:'btn btn-warning btn-simple' %>
             </td>
           <% end %>
           <td style="padding-top:19px;">
