--- a/app/views/users/_form_object_dropdown.html.erb
+++ b/app/views/users/_form_object_dropdown.html.erb
@@ -1,7 +1,7 @@
 <% object = @user.send(type) %>
 <div class="form-group <%= type.to_s %> <%= !@user.can_have?(type) || @user.new_record? && !object ? 'hidden' : '' unless type == :role %>">
   <%= f.label "#{type}_id", type.to_s.capitalize,class: "col-sm-4 control-label text-main" %>
-  <% if @user.new_record? && object || (object && object.is_a?(Role) && params[:edit_role] == 'false') %>
+  <% if @user.new_record? || object.is_a?(Role) && params[:edit_role] == 'false' || !current_user.can_change?(type) and object.present? %>
     <div class="col-sm-8">
       <%= f.hidden_field "#{type}_id", value: object.try(:id) %>
       <label class="col-sm-4 control-label text-main accessToken"><%= object.name %></label>
