--- a/app/views/users/dashboard_classroom.html.erb
+++ b/app/views/users/dashboard_classroom.html.erb
@@ -129,8 +129,7 @@
         <tr class="text-center v-middle">
           <td class="minimal">
             <%= link_to kid do %>
-              <% avatar = kid.male? ? 'boy_avatar.png' : 'girl_avatar.jpg' %>
-              <%= image_tag avatar %>
+              <%= image_tag kid_avatar_for kid %>
             <% end %>
           </td>
           <td>
