#156 - Add new button on Admin Panel.

--- a/app/views/users/dashboard_admin.html.erb
+++ b/app/views/users/dashboard_admin.html.erb
@@ -16,3 +16,9 @@
     </div>
   </div>
 <% end %>
+
+<div class="container kmSection">
+  <div class="row ">
+    <a class="btn btn-danger btn-simple btnVersionServerRD" target="_blank" href="http://kpm-development.herokuapp.com/">View version of Server for R&D</a>
+  </div>
+</div>
