--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -132,6 +132,9 @@ table.table {width:100%;
 
 .btn.submenu{ margin:20px; width: 240px; padding: 8px 0;}
 
+.btnVersionServerRD{margin: 0 20px 0 20px ;width: 240px;padding: 8px 0;color: black;
+  &:hover{color: black;};
+}
 .iFrameGames{display: inline-block; position: absolute; top: 300px;}
 .iFrameGames .btn.btn-simple.btn-warning.inactive{background-color:#ffffff; border-width: 2px; border-color: #a3a3a3; color: #a3a3a3;}
 .iframe{margin-left: 300px; display: inline-block; margin-top: 50px;}
