--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,5 +44,6 @@ a, a:focus, a:hover, a:active {display:inline-block; text-decoration:none;}
 .centered{text-align:center;}
 .righty{float:right;}
 .v-top {vertical-align:top;}
+.v-middle {vertical-align:middle;}
 .form-vpad {padding-top:100px; padding-bottom:80px;}
 textarea {resize:none;}
