--- a/app/assets/stylesheets/apt_graph.scss
+++ b/app/assets/stylesheets/apt_graph.scss
@@ -6,27 +6,38 @@
   p {font-size:18px;}
 }
 
-$row-height: 40px;
-$mixed-row-height: 80px;
 .apt-body {margin-top:20px;
   .apt-col {padding-left:0; padding-right:0; transition: background 0.2s ease;}
-  .apt-y-axis {line-height:$row-height;}
-  .grid {position:relative; margin-bottom:$row-height / 2; background: url(asset_path('apt-grid.png')) repeat; opacity:0.7;}
-  .apt-bar {position:absolute; bottom:-$row-height / 2; left:10px; right:10px; background:rgba(0, 185, 185, 0.8); transition: background 0.2s ease;}
+  .grid {position:relative; background: url(asset_path('apt-grid.png')) repeat; opacity:0.7;}
+  .apt-bar {position:absolute; left:10px; right:10px; background:rgba(0, 185, 185, 0.8); transition: background 0.2s ease;}
   .apt-x-axis {border-top:solid 7px #666666; transition: background, color 0.2s ease;}
   .apt-tip {visibility:hidden; margin-top:-20px; margin-bottom:-20px; z-index:-1; transition: margin 0.2s ease;}
   &.mixed {
-    $total-bar-width: 10px;
-    .apt-y-axis {line-height:$mixed-row-height;}
-    .grid {position:relative; margin-bottom:$mixed-row-height / 2; background: url(asset_path('apt-grid-mixed.png')) repeat;}
-    .apt-bar {left:10px + $total-bar-width;bottom:-$mixed-row-height / 2;}
-    .apt-total-bar {position:absolute; bottom:-$mixed-row-height / 2; left:10px; right:10px; border-left:solid $total-bar-width $color-brand-fade; border-top:solid 2px $color-brand-fade; transition: background 0.2s ease;
+    .grid {position:relative; background: url(asset_path('apt-grid-mixed.png')) repeat;}
+    .apt-total-bar {position:absolute; left:10px; right:10px; border-top:solid 2px $color-brand-fade; transition: background 0.2s ease;
       .apt-label {position:absolute; top:-20px; right:0; padding:0 5px; color:$color-inv; background:$color-brand-fade;
         &:before {display:inline-block; position:absolute; right:100%; content:''; border: solid 0px transparent; border-width:18px 22px 0 0; border-right-color: $color-brand-fade;}
       }
     }
   }
 }
+
+$row-height: 40px;
+$mixed-row-height: 80px;
+
+.apt-body {
+  .apt-y-axis {line-height:$row-height;}
+  .grid {margin-bottom:$row-height / 2; background-size: 1px $row-height;}
+  .apt-bar {bottom:-$row-height / 2;}
+  &.mixed {
+    $total-bar-width: 10px;
+    .apt-y-axis {line-height:$mixed-row-height;}
+    .grid {height:$mixed-row-height * 5; margin-bottom:$mixed-row-height / 2; background-size: 1px $mixed-row-height; }
+    .apt-bar {left:10px + $total-bar-width; bottom:-$mixed-row-height / 2;}
+    .apt-total-bar {height:$mixed-row-height * 5 + 1; bottom:-$mixed-row-height / 2; border-left:solid $total-bar-width $color-brand-fade;}
+  }
+}
+
 .apt-col:hover {background: rgba(0, 0, 0, 0.1);
   .grid {opacity:1;}
   .apt-bar {background:$color-brand;}
